# tar_minimal

./: Cargo.toml  LICENSE  README.md  changelog
.github/: FUNDING.yml
src/: builder.rs  decoder.rs  header.rs  lib.rs  tests.rs
