[package]
name = "tar_minimal"
version = "1.0.0"
edition = "2024"
description = "A minimalist, Unix-focused TAR library designed for high-performance streaming with Zstd."
authors = ["mxnt <m10ferrari1200@gmail.com>"]
license = "MIT"
repository = "https://github.com/LinuxProativo/tar_minimal"
readme = "README.md"
keywords = ["tar", "zstd", "unix", "minimal", "archive"]
categories = ["compression", "filesystem"]

[dev-dependencies]
zstd = "0.13"
tar_minimal = { path = "." }
